--- a/index.html
+++ b/index.html
@@ -26,12 +26,17 @@
   <main class="main">
     <div class="nav">
       <div class="nav-col">
-        <img class="nav-icons" src="/images/icons8-home-24.png">
-        <p class="nav-info">Dashboard</p>
+        <a href="chart.html" style="text-decoration: none; display: flex; align-items: center; gap: 20px;">
+          <img class="nav-icons" src="/images/icons8-home-24.png">
+          <p class="nav-info">Dashboard</p>
+        </a>
       </div>
       <div class="nav-col">
-        <img class="nav-icons" src="images/icons8-menu-50.png">
+        <a href="tenants.html" style="text-decoration: none; display: flex; align-items: center; gap: 20px;">
+          <img class="nav-icons" src="images/icons8-menu-50.png">
         <p class="nav-info">Tenants</p>
+        </a>
+        
       </div>
       <div class="nav-col">
         <img class="nav-icons" src="images/icons8-dollar-24.png">
@@ -153,7 +158,9 @@
             <p>R6,500</p>
           </div>
         </div>
-        <div class="tenant-info-data"></div>
+        <div class="tenant-info-data">
+          <a href="tenants.html" style="text-decoration: none;">See More Tenants</a>
+        </div>
       </div>
     </div>
   </main>
@@ -161,7 +168,8 @@
   <div class="notice">
     <img class="notice-image" src="images/icons8-notice-64.png">
     <p class="notice-text">Note: Three Tenants are missing Payments</p>
-  </div> 
+  </div>
+
   <footer class="footer">
     <p>MRI Software - Property Insights Dashboard</p>
   </footer>
