--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Property Insights</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/styles/style.css">
   <link rel="icon" type="image/png" href="/images/favicon-32x32.png">
 </head>
 <body>
@@ -26,7 +26,7 @@
   <main class="main">
     <div class="nav">
       <div class="nav-col">
-        <a href="chart.html" style="text-decoration: none; display: flex; align-items: center; gap: 20px;">
+        <a href="#" style="text-decoration: none; display: flex; align-items: center; gap: 20px;">
           <img class="nav-icons" src="/images/icons8-home-24.png">
           <p class="nav-info">Dashboard</p>
         </a>
@@ -34,7 +34,7 @@
       <div class="nav-col">
         <a href="tenants.html" style="text-decoration: none; display: flex; align-items: center; gap: 20px;">
           <img class="nav-icons" src="images/icons8-menu-50.png">
-        <p class="nav-info">Tenants</p>
+          <p class="nav-info">Tenants</p>
         </a>
         
       </div>
@@ -43,8 +43,11 @@
         <p class="nav-info">Payments</p>
       </div>
       <div class="nav-col">
-        <img class="nav-icons" src="images/icons8-bar-graph-25.png">
-        <p class="nav-info">Reports</p>
+        <a href="chart.html" style="text-decoration: none; display: flex; align-items: center; gap: 20px;">
+          <img class="nav-icons" src="images/icons8-bar-graph-25.png">
+          <p class="nav-info">Reports</p>
+        </a>
+        
       </div>
       <div class="nav-col">
         <img class="nav-icons" src="images/icons8-settings-25.png">
@@ -174,6 +177,6 @@
     <p>MRI Software - Property Insights Dashboard</p>
   </footer>
 
-  <script src="login.js"></script>
+  <script src="/scripts/login.js"></script>
 </body>
 </html>
