--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Property Insights</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/styles/style.css">
   <link rel="icon" type="image/png" href="/images/favicon-32x32.png">
 </head>
 <body>
@@ -56,6 +56,6 @@
     <p>MRI Software - Secure Access Portal</p>
   </footer>
 
-  <script src="login.js"></script>
+  <script src="/scripts/login.js"></script>
 </body>
 </html>
