--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="user-details">
           <img class="login-icons" src="images/icons8-password-25.png">
-          <input type="password" name="password" id="password" placeholder="Password">
+          <input type="password" name="password" id="password" placeholder="Password" onkeydown="handleCostKeydown(event);">
         </div>
 
         <div>
@@ -47,7 +47,7 @@
     
   </main>
 
-  <a href="#" class="new-user-link">
+  <a href="newuser.html" class="new-user-link">
     <p class="new-user">New User? Register</p>
   </a>
   
