--- a/newuser.html
+++ b/newuser.html
@@ -23,21 +23,20 @@
       <form id="loginForm" class="form">
         <div class="user-details">
           <img class="login-icons" src="images/icons8-user-25.png">
-          <input type="text" name="username" id="username" placeholder="Username or Email">
+          <input type="text" placeholder="Name and Surname" id="new-name" class="form-columns">
         </div>
 
         <div class="user-details">
-          <img class="login-icons" src="images/icons8-password-25.png">
-          <input type="password" name="password" id="password" placeholder="Password">
+          <img>
+          <input type="email" placeholder="Email" id="new-emails" class="form-columns">
         </div>
 
         <div>
-          <input type="submit" value="Login" class="login-button">
+          
         </div>
 
         <div>
-          <input type="checkbox" id="remember-me" name="remember-me">
-          <label for="remember-me">Remember Me</label>
+          
         </div>
 
       </form>
