--- a/chart.html
+++ b/chart.html
@@ -54,17 +54,17 @@
     </div>
 
     <div class="main-sec">
-      <canvas id="myChart"></canvas>
+      <canvas id="myChart" width="1100px" height="400px"></canvas>
     </div>
   </main>
 
   <div class="charts">
     <div class="second-chart">
-      <canvas id="myChart2"></canvas>
+      <canvas id="myChart2" width="500px" height="300px"></canvas>
     </div>
 
     <div class="second-chart">
-      <canvas id="myChart3"></canvas>
+      <canvas id="myChart3" width="500px" height="300px"></canvas>
     </div>
   </div>
 
